# jsonpath-ng-experiments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: jsonpath-ng-experiments-architecture.excalidraw
src/: main.py
src/mapper/: mapper.py  validator.py
src/mapper/models/: destination_schema.json  mapper.json  source_schema.json
tests/unit/: test_main.py
tests/unit/mapper/: destination_response_good_01.json  payload_bad_01.json  payload_good_01.json  source_payload_bad_01.json  source_payload_good_01.json  test_mapper.py  test_validator.py
