[tool.poetry]
name = "jsonpath-ng-experiments"
version = "0.0.1"
description = "Multiple experiments of JSON processing with <jsonpath-ng> Python library"
authors = ["Santiago Garcia Arango <san99tiago@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsonpath-ng = "^1.5.3"
jsonschema = "^4.19.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
coverage = "^7.2.7"
black = "^23.7.0"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
    "src",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# List of multiple useful commands to run app or tests locally
[tool.poe.tasks]
black-format = "black ."
black-check = "black . --check --diff -v"
test-unit = ["_test_unit", "_coverage_html"]
_test_unit = "coverage run -m pytest tests/unit"
_coverage_html = "coverage html"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = false
